package scheduler;

import "NotRecordReason.proto";
import "RecordingStatus.proto";
import "RecordingType.proto";
import "MinimalListingData.proto";

option java_package = "com.comcast.data.protobuf.message.scheduler";
option java_outer_classname = "MinimalRecordingProto";

message MinimalRecording {
  optional int64 id = 1;
  optional NotRecordReason notRecordReason = 2;
  optional RecordingStatus recordingStatus = 3;
  optional RecordingType recordingType = 4;
  required int64 start = 5;
  required int64 end = 6;
  optional MinimalListingData listingData = 7;
  required bool watched = 8;
  required int64 sourceId = 9;
  optional string deviceId = 10;
}
